[package]
name = "indexer"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
futures = "0.3.29"
itertools = "0.12.0"
# near-jsonrpc-client requires tokio ~1.28 so we need to use the same version here
tokio = { version = "1.28.0", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

near-lake-framework = "0.7.3"
near-jsonrpc-client = "0.6.0"
